dynamix/force-app/main/default/objects/Unit_Snag_Response__c/Unit_Snag_Response__c.object-meta.xml
<CustomObject>
    <label>Unit Snag Response</label>
    <nameField>
        <label>Unit Snag Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Snag Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>