dynamix/force-app/main/default/objects/Unit_Snag_Response__c/fields/Answers__c.field-meta.xml
<CustomField>
    <fullName>Answers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Answers</label>
    <type>Checkbox</type>
</CustomField>