dynamix/force-app/main/default/objects/Unit_Snag_Response__c/fields/Customer_Inspection_Answers__c.field-meta.xml
<CustomField>
    <fullName>Customer_Inspection_Answers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Inspection Answers</label>
    <type>Checkbox</type>
</CustomField>