dynamix/force-app/main/default/objects/Unit_Snag_Response__c/fields/Customer_Inspection_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Inspection_End_Date__c</fullName>
    <label>Customer Inspection End Date</label>
    <type>DateTime</type>
</CustomField>