dynamix/force-app/main/default/objects/Unit_Snag_Response__c/fields/Customer_Inspection_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Customer_Inspection_Remarks__c</fullName>
    <label>Customer Inspection Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>