dynamix/force-app/main/default/objects/Unit_Snag_Response__c/fields/Post_OC_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Post_OC_Remarks__c</fullName>
    <label>Post OC Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>