dynamix/force-app/main/default/objects/Unit_Snag_Response__c/fields/Pre_OC_Answers__c.field-meta.xml
<CustomField>
    <fullName>Pre_OC_Answers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre OC Answers</label>
    <type>Checkbox</type>
</CustomField>