dynamix/force-app/main/default/objects/Unit_Snag_Response__c/fields/Pre_OC_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Pre_OC_Remarks__c</fullName>
    <label>Pre OC Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>