dynamix/force-app/main/default/objects/Unit_Snag_Response__c/fields/Pre_OC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_OC_Start_Date__c</fullName>
    <label>Pre OC Start Date</label>
    <type>Date</type>
</CustomField>