dynamix/force-app/main/default/objects/Unit_Snag_Response__c/fields/Project_Snag__c.field-meta.xml
<CustomField>
    <fullName>Project_Snag__c</fullName>
    <label>Project Snag</label>
    <referenceTo>Project_Snag__c</referenceTo>
    <relationshipLabel>Unit Snag Responses</relationshipLabel>
    <relationshipName>Unit_Snag_Responses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>