dynamix/force-app/main/default/objects/Unit_Snag_Response__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Unit Snag Responses</relationshipLabel>
    <relationshipName>Unit_Snag_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>