dynamix/force-app/main/default/objects/Unit_Snag_Response__c/fields/Questions__c.field-meta.xml
<CustomField>
    <fullName>Questions__c</fullName>
    <formula>Project_Snag__r.Questions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questions</label>
    <type>Text</type>
</CustomField>